# applingo-forge

./: .gitignore  Dockerfile  Taskfile.yaml  pyproject.toml  readme.md
src/lambdas/hello/: handler.py
src/lambdas/hello/.infra/: config.json
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: logs.tf  main.tf  policy.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/provisioners/infra/: backend_aws.hcl  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/provisioners/service/: backend_aws.hcl  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
