[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "Multi-lambda project with shared packages"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src/packages" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.hello]
optional = true
[tool.poetry.group.hello.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
